--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Portal de Relatórios Lynis</title>
+  <title>Portal de Audits</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * {
@@ -111,7 +111,7 @@
 <body>
   <main>
     <header>
-      <h1>Relatórios do Lynis</h1>
+      <h1>Relatórios</h1>
       <button class="theme-toggle" onclick="toggleTheme()">🌓</button>
     </header>
 
