--- a/html/index.html
+++ b/html/index.html
@@ -102,6 +102,20 @@
       background: #ffff99;
       font-weight: bold;
     }
+    <!--quadros em paralelo-->
+        #reportCards {
+          display: flex;
+          flex-wrap: wrap;
+          gap: 20px;
+          justify-content: center;
+        }
+
+        .report-wrapper {
+          flex: 1 1 400px;
+          max-width: 480px;
+          min-width: 300px;
+          box-sizing: border-box;
+        }
   </style>
 </head>
 <body>
